scrapping devidends: done

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
         }
         rawFile.send(null);
     }
-    readTextFile("./companyDividends.txt");
+    readTextFile("./datas/companyDividends.txt");
     // console.log(jsonData);
     // document.write(jsonData.company);
 
